Impostazione dei contenuti e sezioni base

--- a/config.json
+++ b/config.json
@@ -1,3 +1,6 @@
 {
-    "useSideNav": "true"
+    "useSideMenu": true,
+    "lineBreaks": "gfm",
+    "additionalFooterText": "",
+    "anchorCharacter": "#"
 }
